--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <titile>calculator</titile>
-    <link rel="stylesheet" href="styles.css">
+    <titile></titile>
     <link rel="shortcut icon" href="./calculator.png" type="image/x-icon">
+
+    <link rel="stylesheet" href="styles.css">
+
 
     <script src="https://kit.fontawesome.com/d409871963.js" crossorigin="anonymous"></script>
 
